gl31-master/src/test/deca/context/valid/complet/multiple_meth.deca
// Description:
//    Test valide pour complet context
//
// Resultats:
//    Succes
//
// Historique:
//    cree le 19/01/2021
class Test{
    protected int a;

    void methTest(int param){
        print(a*param);
    }

    void methTwo(float param, boolean b){
        //println(b); On ne peut pas print un boolean
        print(param);
    }
}
