gl31-master/src/test/deca/context/invalid/sansobjet/directaffect_int.deca
// Description:
//    Typage : associe true à un int
//
// Resultats:
//    Ligne 10: Affectation de type impossible, 'int' ne peut pas valoir 'true'
//
// Historique:
//    cree le 17/01/2021
{
   int a = true;
}
